release 0.10

	* fixed a bug in storage that would, in rare cases, fail to do a
	  complete check.
	* exposed more settings for tweaking parameters in the piece-picker,
	  downloader and uploader (http_settings replaced by session_settings).
	* tweaked default settings to improve high bandwidth transfers.
	* improved the piece picker performance and made it possible to download
	  popular pieces in sequence to improve disk performance.
	* added the possibility to control upload and download limits per peer.
	* fixed problem with re-requesting skipped pieces when peer was sending pieces
	  out of fifo-order.
	* added support for http seeding (the GetRight protocol)
	* renamed identifiers called 'id' in the public interface to support linking
	  with Objective.C++
	* changed the extensions protocol to use the new one, which is also
	  implemented by uTorrent.
	* factorized the peer_connection and added web_peer_connection which is
	  able to download from http-sources.
	* converted the network code to use asio (resulted in slight api changes
	  dealing with network addresses).
	* made libtorrent build in vc7 (patches from Allen Zhao)
	* fixed bug caused when binding outgoing connections to a non-local interface.
	* add_torrent() will now throw if called while the session object is
	  being closed.
	* added the ability to limit the number of simultaneous half-open
	  TCP connections. Flags in peer_info has been added.

release 0.9.1

	* made the session disable file name checks within the boost.filsystem library
	* fixed race condition in the sockets
	* strings that are invalid utf-8 strings are now decoded with the
	  local codepage on windows
	* added the ability to build libtorrent both as a shared library
	* client_test can now monitor a directory for torrent files and automatically
	  start and stop downloads while running
	* fixed problem with file_size() when building on windows with unicode support
	* added a new torrent state, allocating